--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,3 +4,56 @@
     background-size: cover;
     background-repeat: no-repeat;
 }
+
+
+html, body {
+    background-color: #fff;
+    color: #5f5f5f !important;
+    /* color: #636b6f !important; */
+    font-family: 'Nunito', sans-serif !important;
+    font-weight: 400;
+    height: 100vh;
+    margin: 0;
+}
+
+.full-height {
+    height: 90vh;
+}
+
+.flex-center {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+}
+
+.position-ref {
+    position: relative;
+}
+
+.top-right {
+    position: absolute;
+    right: 10px;
+    top: 18px;
+}
+
+.content {
+    text-align: center;
+}
+
+.title {
+    font-size: 84px;
+}
+
+.links > a {
+    color: #636b6f;
+    padding: 0 25px;
+    font-size: 13px;
+    font-weight: 600;
+    letter-spacing: .1rem;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+
+.m-b-md {
+    margin-bottom: 30px;
+}
