--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,12 +8,23 @@
 
 html, body {
     background-color: #fff;
-    color: #5f5f5f !important;
+    color: #3d3d3d !important;
     /* color: #636b6f !important; */
-    font-family: 'Nunito', sans-serif !important;
-    font-weight: 400;
+    /* font-family: 'Nunito', sans-serif !important; */
+    font-family: 'Helvetica';
+    /* font-weight: 400; */
     height: 100vh;
     margin: 0;
+}
+#loginNav{
+    color:white !important;
+}
+
+a.nav-link {
+    color: rgb(66, 66, 66) !important;
+}
+li.nav-item>a.nav-link {
+    color: rgb(66, 66, 66) !important;
 }
 
 .full-height {
