--- a/public/css/style.css
+++ b/public/css/style.css
@@ -34,6 +34,47 @@ padding: 5px;
     text-decoration: none;
 }
 
+/* .tooltip{ */
+    /* position: relative; */
+    /* display: inline-block; */
+    /* color: black;
+    visibility: visible;
+} */
+
+/* .tooltext{
+    z-index: 15;
+    position: absolute;
+} */
+
+/* .tooltext{
+    visibility: hidden;
+    z-index: 15;
+    position: absolute;
+
+} */
+
+
+.tooltips {
+    position: relative;
+    display: inline-block;
+  }
+
+  .tooltips .tooltext {
+    visibility: hidden;
+    text-align: center;
+    border-radius: 6px;
+    padding: 10px;
+    position: absolute;
+    z-index: 15;
+    top: 20px;
+    left: -20px;
+  }
+
+  .tooltips:hover .tooltext {
+    visibility: visible;
+  }
+
+
 html, body {
     background-color: #fff;
     color: #3d3d3d !important;
