--- a/public/css/style.css
+++ b/public/css/style.css
@@ -52,26 +52,24 @@ padding: 5px;
     position: absolute;
 
 } */
-
-
 .tooltips {
-    position: relative;
-    display: inline-block;
+    position: relative !important;
+    display: inline-block !important;
   }
 
   .tooltips .tooltext {
-    visibility: hidden;
-    text-align: center;
-    border-radius: 6px;
-    padding: 10px;
-    position: absolute;
-    z-index: 15;
-    top: 20px;
-    left: -20px;
+    visibility: hidden !important;
+    text-align: center !important;
+    border-radius: 6px !important;
+    padding: 10px !important;
+    position: absolute !important;
+    z-index: 15 !important;
+    top: 20px !important;
+    left: -20px !important;
   }
 
   .tooltips:hover .tooltext {
-    visibility: visible;
+    visibility: visible !important;
   }
 
 
