--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,13 @@
 #aboutBackgroundHeader {
-    height: 200px;
+    height: 150px;
     background-position: center -190px;
     background-size: cover;
     background-repeat: no-repeat;
+    background-attachment: fixed;
+    /* Box Shadow From CSS Tricks */
+    -moz-box-shadow:    inset 0 0 10px #000000;
+   -webkit-box-shadow: inset 0 0 10px #000000;
+   box-shadow:         inset 0 0 10px #000000;
 }
 .frameworks i>p{
     font-family: 'Helvetica';
